basic sequence mapping setup

--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -1,7 +1,32 @@
 .dashboard-root {
     padding-top: 5px;
     padding-bottom: 30px;
-    height:100%;
+    height: 100%;
+
+    .canvas-wrapper {
+        overflow-x: scroll;
+
+        h3 {
+            color: white;
+        }
+    }
+
+    .canvas-wrapper::-webkit-scrollbar {
+        height: 0.7em;
+        width: 6px;
+        margin-top: 2px;
+    }
+
+    .canvas-wrapper::-webkit-scrollbar-thumb {
+        background: #a9a9a9;
+        border-radius: 10px;
+    }
+
+    .canvas-wrapper::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
+        border-radius: 10px;
+    }
+
     &.batman {
         background: #252830;
     }
