updated with chart labels

--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -1,29 +1,20 @@
 .dashboard-root {
-    padding-top: 5px;
+    padding-top: 30px;
     padding-bottom: 30px;
+    margin-bottom: -25px;
+
+    a {
+        color: #4e79a7;
+        text-decoration: none;
+    }
 
     .canvas-wrapper {
-        h3 {
+        h4 {
             color: white;
+            padding: 0px 5px;
+            font-weight: bold;
         }
     }
-
-    .canvas-wrapper::-webkit-scrollbar {
-        height: 0.7em;
-        width: 6px;
-        margin-top: 2px;
-    }
-
-    .canvas-wrapper::-webkit-scrollbar-thumb {
-        background: #a9a9a9;
-        border-radius: 10px;
-    }
-
-    .canvas-wrapper::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px grey;
-        border-radius: 10px;
-    }
-
     &.batman {
         background: #252830;
     }
@@ -34,23 +25,75 @@
         font-size: 24px;
         font-weight: bolder;
     }
-    .hapmap-icon {
-        margin-right: 10px;
-        font-size: 22px;
-        font-weight: bold;
-    }
-    .loading-spinner {
-        margin: 100px auto;
-    }
+
     .dashboard-container {
         min-height: 1000px;
     }
-    .hapmap-canvas {
-        margin: 25px 0px;
+
+    .description {
+        color: white;
+        line-height: 1.45;
+        &.strong {
+            font-weight: bold;
+            margin-bottom: 0px;
+            margin-top: 2.5px;
+        }
     }
-    .theme-button {
-        margin: 0px 0px;
-        position: absolute;
-        right: 10px;
+}
+
+.footer {
+    padding: 10px;
+    background: #1a1c22;
+
+    .footer-inner {
+        display: inline-block;
+        a {
+            font-size: 1.25em;
+            color: white !important;
+        }
+    }
+}
+
+.legend-wrapper {
+    display: block;
+    .legend-box {
+        margin: 0px 0px 0px 5px;
+        display: inline-block;
+        .color-box {
+            width: 20px;
+            height: 20px;
+            display: inline-block;
+            vertical-align: top;
+        }
+    }
+    .color-legend {
+        color: white;
+        margin-left: 5px;
+        font-weight: bold;
+        font-size: 1em;
+    }
+    .main-label {
+        margin-right: 20px;
+        margin-left: 5px;
+        font-weight: bold;
+        font-size: 1.35em;
+    }
+
+    .text-primary {
+        color: #4ea786;
+    }
+
+ 
+}
+
+.banner{
+    color:#4e79a7;
+    font-weight: bold;
+    text-align: center;
+}
+
+@media (max-width: 767px) {
+    .legend-wrapper {
+        margin-bottom: 0px !important;
     }
 }
